Remove base price logic and weight from pickup
